@@ -81,6 +81,7 @@ version <next>
 - Bethsoft VID demuxer and video decoder
 - CRYO APC demuxer
 - Atrac3 decoder
+- V.Flash PTX decoder
 
 version 0.4.9-pre1:
 
